welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: ';' expected but '{' found.
   } while (!estSurBlanc()){
                           ^Program:18: error: Unmatched closing brace '}' ignored here
	}
        ^Program:19: error: eof expected but '}' found.
}
^